<resources>
    <string name="facebook_app_id">208061289735274</string>
    <string name="fb_login_protocol_scheme">fb208061289735274</string>

    <string name="app_name">ReWorld</string>
    <string name="logo">Logo</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_navigation">navegation</string>
    <string name="menu_home">Home</string>
    <string name="menu_new_post">Recycle</string>
    <string name="menu_account">Me</string>
    <string name="button_lets_recycle">Let\'s to Recycle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_proof">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="text_button_login_with_email">Login with Email</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_button_login">Login</string>
    <string name="donHaveAcount">Do not have Account?</string>
    <string name="create_here">Get it here!</string>

    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_user">User</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_button_createAccount">Create Account</string>
    <string name="toolbar_title_createaccount">Create Account</string>
    <string name="pick_up">Pick up</string>
    <string name="la_vega_rd">La Vega, RD</string>

</resources>
