<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.reworld.pablo384.reworld.UI.activities.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittexr_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittexr_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittexr_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittexr_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittexr_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPassword_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/joinUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_createAccount"
                android:theme="@style/ButtonsAccountWhite" />


        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>
