<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.reworld.pablo384.reworld.UI.activities.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:visibility="invisible"
        app:layout_anchorGravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:layout_centerInParent="true"
                android:background="@drawable/reworld_icon"
                android:scaleType="centerCrop" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_Login_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_button_login"
                    android:theme="@style/ButtonsAccountWhite" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/donHaveAcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donHaveAcount"
                        android:textColor="@color/editTextColorBlack"
                        android:textSize="@dimen/textSizedonHaveAcount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/donHaveAcount"
                        android:text="@string/create_here"
                        android:textColor="@color/editTextColorBlack"
                        android:textSize="@dimen/textSizedonHaveAcount"
                        android:textStyle="bold" />


                </RelativeLayout>


            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
